Stock: start to navigate to url when click the tab

--- a/Docs/WPF/Demo/Stock/WpfApplication4/MainWindow.xaml
+++ b/Docs/WPF/Demo/Stock/WpfApplication4/MainWindow.xaml
@@ -8,25 +8,25 @@
         Title="MainWindow"  VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch">
     <Grid>
         <TabControl x:Name="tabControl">
-            <TabItem Header="General" x:Name="tabGeneral">
+            <TabItem Header="General" x:Name="tabGeneral" GotFocus="WebBrowserGotFocus">
                 <Grid Background="#FFE5E5E5">
-                    <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="91,33,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <TextBox x:Name="txbCode" HorizontalAlignment="Left" Height="23" Margin="91,33,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
                     <Label x:Name="label" Content="Code" HorizontalAlignment="Left" Margin="38,30,0,0" VerticalAlignment="Top" Width="98"/>
                     <Button x:Name="btnGo" Content="Go" HorizontalAlignment="Left" Margin="224,33,0,0" VerticalAlignment="Top" Width="75" Click="btnGo_Click"/>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="tabBaidu" Header="Baidu">
+            <TabItem x:Name="tabBaidu" Header="Baidu" GotFocus="WebBrowserGotFocus">
                 <Grid Background="#FFE5E5E5">
                     <WebBrowser x:Name="wbBaidu" Navigated="WebBrowserNavigated" LoadCompleted="WebBrowserLoadCompleted" />
 
                 </Grid>
             </TabItem>
-            <TabItem x:Name="tabAli" Header="Ali">
+            <TabItem x:Name="tabAli" Header="Ali" GotFocus="WebBrowserGotFocus">
                 <Grid Background="#FFE5E5E5">
                     <WebBrowser x:Name="wbAli"  Navigated="WebBrowserNavigated" LoadCompleted="WebBrowserLoadCompleted" />
                 </Grid>
             </TabItem>
-            <TabItem x:Name="tabGoogle" Header="Google">
+            <TabItem x:Name="tabGoogle" Header="Google" GotFocus="WebBrowserGotFocus">
                 <Grid Background="#FFE5E5E5">
                     <WebBrowser x:Name="wbGoogle"  Navigated="WebBrowserNavigated" LoadCompleted="WebBrowserLoadCompleted" />
                 </Grid>
